manifests/happy/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: happy-api
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/name: happy-api
spec:
  selector:
    app.kubernetes.io/name: happy-api
  ports:
    - name: http
      port: 3005
      targetPort: http
      protocol: TCP
