manifests/happy/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: happy-web
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  labels:
    app.kubernetes.io/name: happy-web
spec:
  selector:
    app.kubernetes.io/name: happy-web
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
