manifests/happy/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: happy-web
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    cert-manager.io/cluster-issuer: lets-encrypt
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: happy.72602.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: happy-web
                port:
                  name: http
  tls:
    - hosts:
        - happy.72602.online
      secretName: happy.72602.online-tls
